--- a/assets/style.css
+++ b/assets/style.css
@@ -45,9 +45,13 @@ section#login {
     border-radius: 20px;
     box-shadow: 0px 0px 10px rgba(0, 0, 0, 0.473);
 
+    transition: widht .3s, height .3s;
+    transition-timing-function: ease;
+
 }
 
 section#login > div#imagem {
+
     display: block;
     background: #5f2c82 url(../img/Predio.jpg) no-repeat;
     background-size: cover;
@@ -55,7 +59,8 @@ section#login > div#imagem {
     height: 200px;
 }
 
-section#login > div#formu {
+section#login > div#form {
+
     display: block;
     padding: 10px;
 }
