--- a/assets/media-query.css
+++ b/assets/media-query.css
@@ -37,7 +37,8 @@ Telas Grande: acima de 1200px
     }
 
     section#login {
-        width: 990px;
+        width: 1200px;
+        height: 95%;
     }
 
     section#login > div#imagem {
