--- a/assets/media-query.css
+++ b/assets/media-query.css
@@ -33,22 +33,39 @@ Telas Grande: acima de 1200px
 @media screen and (min-width: 992px) {
 
     body {
+
         background-image: linear-gradient(to top, #49a09d, #5f2c82);
+
     }
 
     section#login {
+        
         width: 990px;
+
     }
 
     section#login > div#imagem {
-        float: left;
+
+        float: right; /*or left*/
         width: 50%;
         height: 100%;
     }
 
     section#login > div#form {
-        float: right;
+
+        float: left; /*or right*/
         width: 50%;
+    }
+
+    div#form > h1 {
+
+        font-size: 2rem;
+
+    }
+
+    div#form > p {
+
+        font-size: 1.2rem;
     }
 
 }
