--- a/assets/style.css
+++ b/assets/style.css
@@ -6,7 +6,13 @@ PALETA DE CORES:
     #5f2c82
 */
 
-*{
+/*@font-face { SE QUISER HOSPEDAR A API DO GOOGLE
+    font-family: 'Material Symbols Outlined';
+    font-style: normal;
+    src: url(https://example.com/material-symbols.woff) format('woff');
+  }*/
+
+* {
 
     font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
     padding: 0px;
