--- a/assets/style.css
+++ b/assets/style.css
@@ -68,14 +68,76 @@ section#login > div#imagem {
 section#login > div#form {
 
     display: block;
-    padding: 10px;
+    padding: 7px;
 }
 
 div#form > h1 {
+
     text-align: center;
     margin-bottom: 10px;
 }
 
 div#form > p {
+    
     font-size: 0.8rem;
+
+}
+
+form > div.campo {
+
+    display: block;
+    background-color: #5f2c82;
+    width: 100%;
+    height: 45px;
+
+
+}
+
+form > input[type=submit] {
+
+    display: block;
+    font-size: 1rem;
+    width: 100%;
+    height: 40px;
+    background-color: #49a09d;
+    color: #fff;
+    border: none;
+    border-radius: 6px;
+
+}
+
+form > input[type=submit]:hover {
+
+    background-color: #2f6a68;
+    cursor: pointer;
+
+}
+
+form > a.botton_forget {
+
+    display: block;
+    text-align: center;
+    font-size: 1rem;
+    width: 100%;
+    height: 40px;
+    padding-top: 5px;
+    margin-top: 5px;
+    background-color: #fff;
+    color:  #306765;
+    border: 1px solid #49a09d;
+    border-radius: 7px;
+    text-decoration: none;
+
+}
+
+form > a.botton_forget:hover {
+
+    background-color: #c4faf8;
+
+}
+
+form > a.botton_forget > span {
+
+    font-size: 0.8rem;
+
 }
