--- a/assets/style.css
+++ b/assets/style.css
@@ -47,7 +47,7 @@ section#login {
 
     background-color: #fff;
     width: 250px;
-    height: 500px;
+    height: 505px;
     border-radius: 20px;
     box-shadow: 0px 0px 10px rgba(0, 0, 0, 0.473);
 
@@ -69,12 +69,14 @@ section#login > div#form {
 
     display: block;
     padding: 7px;
+
 }
 
 div#form > h1 {
 
     text-align: center;
     margin-bottom: 10px;
+
 }
 
 div#form > p {
@@ -89,8 +91,12 @@ form > div.campo {
     background-color: #5f2c82;
     width: 100%;
     height: 45px;
+    border-radius: 5px;
+    margin: 5px 0px
+}
 
-
+div.campo > label { /*retirar/oculto o nome "login" e "senha"*/
+    display: none;
 }
 
 form > input[type=submit] {
