--- a/assets/media-query.css
+++ b/assets/media-query.css
@@ -11,23 +11,48 @@ Telas Grande: acima de 1200px
 @media screen and (min-width: 768px) and (max-width: 992px) {
     
     body {
+    
         background-image: linear-gradient(to top, #49a09d, #5f2c82);
+    
     }
     
     section#login {
-        width: 90vw;
+
+        width: 95vw;
+        height: 450px;
+    
     }
 
     section#login > div#imagem {
+    
         float: left;
         width: 30%;
         height: 100%;
+    
     }
 
     section#login > div#form {
+    
         float: right;
         width: 70%;
+    
     }
+
+    div#form > h1 {
+
+        font-size: 2rem;
+
+    }
+
+
+    div#form > p {
+
+        font-size: 1.1rem;
+        margin: 20px 0px;
+        padding: 30px 0px;
+    
+    }
+
 }
 
 @media screen and (min-width: 992px) {
@@ -40,7 +65,8 @@ Telas Grande: acima de 1200px
 
     section#login {
         
-        width: 990px;
+        width: 1000px;
+        height: 500px;
 
     }
 
@@ -49,12 +75,14 @@ Telas Grande: acima de 1200px
         float: right; /*or left*/
         width: 50%;
         height: 100%;
+    
     }
 
     section#login > div#form {
 
         float: left; /*or right*/
         width: 50%;
+    
     }
 
     div#form > h1 {
@@ -66,6 +94,9 @@ Telas Grande: acima de 1200px
     div#form > p {
 
         font-size: 1.2rem;
+        margin: 20px 0px;
+        padding: 30px 0px;
+    
     }
 
 }
